# MyTranslator

./: .gitignore  README.md  build.gradle  import-summary.txt
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/html/: help.html  privacy.html
app/src/main/cpp/: OCRData.hpp  TextRecognizer.cpp  TextRecognizer.hpp  native-lib.cpp  ocr_jni.cpp  ocr_jni.h
app/src/main/cpp/com_googlecode_tesseract_android/: Android.mk
app/src/main/cpp/com_googlecode_tesseract_android/src/opencl/: openclwrapper.cpp
app/src/main/java/com/ndanh/mytranslator/adapter/: HistoryRecyclerViewApdater.java  SettingAdapter.java
app/src/main/res/drawable/: bg_check_able.xml  bg_setting_item.xml  bg_test.xml  bg_voice.xml  circle.xml  circle_green.xml  ic_flag_japan.xml  ic_flag_usa.xml  ic_flag_vietnam.xml  ic_setting_camera.xml  ic_setting_display.xml  ic_setting_keyboard.xml  ic_setting_translate.xml  ic_setting_voice.xml  ic_swap_white.xml  ic_test.xml  list_divider.xml  white_border_button_bg.xml
app/src/main/res/drawable-v21/: bg_btn_dialog.xml  bg_setting_item.xml
app/src/main/res/layout/: activity_about.xml  activity_camera.xml  activity_help.xml  activity_history.xml  activity_main.xml  activity_privacy_policy.xml  activity_setting.xml  activity_splash.xml  activity_text_translator.xml  activity_voice_translator.xml  dialog_chose_language.xml  item_dialog_change_language.xml  item_history_checked.xml  item_history_non_check.xml  item_history_normal.xml  item_recycler_change_language.xml  navigation_bar.xml  setting_item.xml
app/src/main/res/layout-land/: activity_camera.xml  navigation_bar.xml
app/src/main/res/menu/: nav_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-vi/: strings.xml
(+68 files in other folders)
